added swagger for the dokumentation
