# src/aut.js
@@ -15,7 +15,7 @@ autrouter.use(express.json());
 
 // By checking if the session email has been given it either verifys you by showing the E-Mail or rejects you.
 autrouter.get('/verify', (req, res) => {
-  // #swagger.tags['Authorization']
+  // #swagger.tags = ['Authorization']
   if (req.session.email) {
     return res.status(200).json({ email: req.session.email });
   }
@@ -24,7 +24,7 @@ autrouter.get('/verify', (req, res) => {
 
 // It checks if there is an email and password in the body and then it checks the password. If all correct it adds the current email to the session.email
 autrouter.post('/login', (req, res) => {
-  // #swagger.tags['Authorization']
+  // #swagger.tags = ['Authorization']
   const { email, password } = req.body;
 
   if (email && password) {
@@ -38,7 +38,7 @@ autrouter.post('/login', (req, res) => {
 
 // It nullifys the session.email so now you're unauthorized
 autrouter.delete('/logout', (req, res) => {
-  // #swagger.tags['Authorization']
+  // #swagger.tags = ['Authorization']
   if (req.session.email) {
     req.session.email = null;
     return res.status(204).send('logged out.');
